# quantms.io

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  dump_psm  dump_psm.parquet  enviroment.yml  psm_generation.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-spec.yml  python-app.yml  python-package.yml  python-publish.yml
docs/: .readthedocs.yaml  AE.md  AE.rst  CNAME  DE.md  FEATURE.md  FEATURE.rst  METADATA.md  PEPTIDE.md  PEPTIDE_EVIDENCE.md  PROJECT.md  PROTEIN.md  PSM.md  PSM.rst  Parquet.rst  README.adoc  README.md  ae.rst  conf.py  customstyle.css  de.rst  feature.avsc  feature.rst  field_msg.tsv  ibaq_usecase.adoc  index.html  index.rst  introduction.rst  mz.avsc  peptide.avsc  peptide.rst  pg.avsc  pg_matrix.avsc  project.rst  protein.avsc  psm.avsc  psm.rst  query.rst  requirements.txt  score_map_msg.tsv  (+2 more)
docs/command/: AE_or_DE_command.md  AE_or_DE_command.rst  Feature_command.md  Feature_command.rst  Other_command.md  Other_command.rst  Parquet.rst  Project_command.md  Project_command.rst  Psm_command.md  Psm_command.rst  README.md
docs/images/: formats-relation.excalidraw
docs/include/: PXD004683-quantms.csv  (+17 more)
nextflow/: maxquant_psm.nf  nextflow.config
quantmsio/: quantmsio_cli.py  quantmsioc.py
tests/: common.py  test_absoexp.py  test_diann.py  test_diann_performance.py  test_diffexp.py  test_feature.py  test_feature_performance.py  test_file_utils.py  test_maxquant.py  test_new_psm.py  test_pg_matrix.py  test_project.py  test_psm.py  test_query.py  test_sdrf.py  test_spectra_msg.py  test_statistics.py
(+241 files in other folders)
